--- a/NewRepo/index.html
+++ b/NewRepo/index.html
@@ -4,5 +4,5 @@
     
 </P>
 <p> Cral Louis Saint Claire , the devil in Dior , the king of the underworld.
-    He owns everything the police , the governament everything....
-</p>
+    He owns everything the police , the governament everything....He is the law..
+</p>                    
