i corrected his name too

--- a/NewRepo/index.html
+++ b/NewRepo/index.html
@@ -3,6 +3,6 @@
     changbin salon munreeh   changbin salon 
     
 </P>
-<p> Cral Louis Saint Claire , the devil in Dior , the king of the underworld.
+<p> Carl Louis Saint Claire , the devil in Dior , the king of the underworld.
     He owns everything the police , the governament everything....He is the law..
 </p>                    
